...
                foregroundColor: Colors.white,
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(56),
                ),
              ),
              onPressed: _isLoading ? null : _handleLogin,
              child: Text('Entrar', style: AppTextStyles.button),
            ),
          ),
          const SizedBox(height: 19),
          Text(
            'por transportefacil.com.br',
            textAlign: TextAlign.center,
...
